# ias-assembler

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: deploy.yml
assembler/: Cargo.toml
assembler/src/: analysis.rs  grammar.pest  lib.rs
assembler/src/analysis/: add.rs  div.rs  jump.rs  load.rs  mod.rs  mul.rs  sh.rs  stor.rs  sub.rs
assembler/src/decoding/: addr.rs  arithmetic.rs  jump.rs  load.rs  mod.rs
assembler/src/encoding/: mod.rs
assembler/src/synthesis/: ac.rs  mem.rs  mod.rs  mq.rs  pc.rs
common/: Cargo.toml
common/src/: lib.rs
tests/: simple_program.py
web/: flake.nix  httpd.conf  index.html  index.js
